--- a/Client/package.json
+++ b/Client/package.json
@@ -34,5 +34,9 @@
 		"vite": "^5.0.3",
 		"vitest": "^2.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"less": "^4.2.0",
+		"sanitize.css": "^13.0.0"
+	}
 }
