--- a/Client/package.json
+++ b/Client/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "client",
-	"version": "0.0.1",
+	"version": "1.0.0",
+	"author": "Edanriell",
+	"private": true,
+	"license": "MIT",
+	"type": "module",
 	"scripts": {
 		"start:dev": "vite dev",
 		"start:build": "vite build",
@@ -34,7 +38,6 @@
 		"vite": "^5.0.3",
 		"vitest": "^2.0.0"
 	},
-	"type": "module",
 	"dependencies": {
 		"less": "^4.2.0",
 		"sanitize.css": "^13.0.0"
